exception UserNotFoundException {
   1: string code;
   2: string message;
}