/**
 * 文件传输类
 */
struct FileData{
    1:required string   name,                   // 文件名字
    2:required binary   buff,                   // 文件数据
}