/**
 * 用户类
 */
struct  User {
  1:i32 userId,
  2:string name
}